compiler/testData/diagnostics/tests/inference/cstFromErrorAndNonErrorTypes.fir.kt

fun test() {
    run {
        if (true)
            return@run false
        <!UNRESOLVED_REFERENCE!>unresolved<!>.toString()
    }
}
